--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "i2vauthapi-node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
  "scripts": {
   "start": "node src/server.js",
   "dev": "nodemon src/server.js"
